// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkspaceIO > saves 1`] = `
"export default (
  <page>
    <frame name=\\"\\" />
  </page>
);
"
`;

exports[`WorkspaceIO > saves 2`] = `
"export default (
  <page>
    <text name=\\"\\" />
  </page>
);
"
`;

exports[`WorkspaceIO > saves 3`] = `
"export default (
  <page>
    <frame name=\\"\\" />
  </page>
);
"
`;
